--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'ru.barabo'
-version '0.9.1'
+version '0.9.3'
 
 repositories {
     mavenCentral()
@@ -14,9 +14,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.10"
 
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
-
-    //implementation group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '12.2.0.1'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
 
     implementation group: 'com.oracle.database.jdbc', name: 'ojdbc6', version: '11.2.0.4'
 }
